# injections

./: .clang-format  CMakeLists.txt  README.md  compile.ps1
apc_queue_code_injecter/: CMakeLists.txt  main.cpp
cmake/: Sign.cmake
dll_inject/: CMakeLists.txt  main.cpp
dll_injecter/: CMakeLists.txt  dll_inject.h  main.cpp  with_createremotethread.cpp  with_reflective_dll.cpp
dll_reflective_injectee/: CMakeLists.txt  main.cpp  reflective.h
dll_reflective_injectee/infos/Win32/: exports.txt  headers.txt  imports.txt  symbols.txt
dll_reflective_injectee/infos/x64/: exports.txt  headers.txt  imports.txt  symbols.txt
dll_sample/: CMakeLists.txt  main.cpp
dll_sample/infos/Win32/: exports.txt  headers.txt  imports.txt  symbols.txt
dll_sample/infos/x64/: exports.txt  headers.txt  imports.txt  symbols.txt
dll_sample/scripts/: post_build.ps1
dll_sample_injectee/: CMakeLists.txt  main.cpp
dll_sample_injectee/infos/Win32/: exports.txt  headers.txt  imports.txt  symbols.txt
dll_sample_injectee/infos/x64/: exports.txt  headers.txt  imports.txt  symbols.txt
hook/: CMakeLists.txt  main.cpp
pe_sample/: CMakeLists.txt  main.cpp
shellcode_local_process/: CMakeLists.txt  main.cpp
shellcode_remote_process/: CMakeLists.txt  apc_queue.cpp  early_apc_queue.cpp  hijack_thread.cpp  inject.h  inject_thread.cpp  main.cpp  memory_view.cpp
ulib/: CMakeLists.txt
ulib/include/: addresses.h  log.h  modules.h  nt.h  ntquerysysteminformation.hpp  processes.h  shellcodes.h  syscalls.h  utils.h  version.h
ulib/include/public/: ulib.h
ulib/src/: addresses.cpp  hooks.cpp  log.cpp  modules.cpp  processes.cpp  syscalls.cpp  version.cpp
ulib/test/: CMakeLists.txt  processes.cpp  syscalls.cpp  version.cpp
ulib/test/test/: test.h
